# zenoh-demos

./: .gitignore  README.md  flake.nix
.github/workflows/: ci.yml
ROS2/: README.md
ROS2/zenoh-pico-cyclonedds-cdr-message-log/: CMakeLists.txt  README.md  z_pub_ros2.c  z_sub_ros2.c
ROS2/zenoh-pico-teleop-gyro/: README.md  platformio.ini
ROS2/zenoh-pico-teleop-gyro/src/: main.ino
ROS2/zenoh-python-float32-data/: README.md  ros2-float32-data.py
ROS2/zenoh-python-lidar-plot/: README.md  requirements.txt  ros2-lidar-plot.py
ROS2/zenoh-python-teleop/: README.md  requirements.txt  ros2-teleop.py
ROS2/zenoh-rest-teleop/: README.md  ros2-tb3-teleop.html  ros2-teleop.html
ROS2/zenoh-rust-replay/: Cargo.toml  README.md  diff.patch  zenoh-influxdb.json5
ROS2/zenoh-rust-teleop/: Cargo.toml  README.md
computer-vision/: README.md
computer-vision/face-recog/: README.md  capture_video.py  detect_faces.py  display_faces.py  display_video.py  encode_faces.py  load_face_db.py  load_new_face.py  recognize_faces.py  requirements.txt
computer-vision/face-recog/face-sig-db/: hollywood-db.json  soccer-db.json  tennis-db.json  zettascale-db.json
computer-vision/object-detection/: README.md  capture_video.py  detect_objects.py  display_video.py  requirements.txt
computer-vision/qrcode/: README.md  capture_video.py  detect_and_decode.py  display_video.py  requirements.txt
computer-vision/zcam/: Cargo.toml  README.md  curl_cmds.sh
computer-vision/zcam/src/: capture.rs  display.rs
computer-vision/zcam/zcam-python/: README.md  zcapture.py  zdisplay.py
computer-vision/zcam/zcam-rest/: README.md  index.html
computer-vision/zcam/zcam-rs-python/: README.md  zcapture_rs.py  zdisplay_rs.py
computer-vision/zcam/zcam-rust/: .gitignore  Cargo.toml  README.md
computer-vision/zcam/zcam-rust/src/: capture.rs  decode.rs  display.rs  encode.rs  face_detect.rs  haar.rs  lib.rs
distributed-web/: README.md  index.html  style.css
gamepad-dragonbot/: Cargo.toml  Makefile  README.md  flow.yaml  zenoh-daemon.json  zenoh-zf-router.json
gamepad-dragonbot/operator-twist/: Cargo.toml
gamepad-dragonbot/operator-twist/src/: lib.rs
gamepad-dragonbot/sink-serialize/: Cargo.toml
gamepad-dragonbot/sink-serialize/src/: lib.rs
gamepad-dragonbot/source-gamepad/: Cargo.toml
gamepad-dragonbot/source-gamepad/src/: lib.rs
gamepad-dragonbot/types/: Cargo.toml
gamepad-dragonbot/types/src/: lib.rs
plotting/zplot/: README.md  dashboard.json  z_plot.html  z_plot.py  z_pub_rand.py
plotting/zplot/z_plot_ts/: index.html  package.json
turtlebot3/: README.md
turtlebot3/zdrive-python/: README.md  servo.py  zdrive.py
turtlebot3/zlidar-python/: README.md  zlidar.py
turtlebot3/zlidar-rust/: Cargo.toml  README.md
turtlebot3/zlidar-rust/src/: main.rs
turtlebot3/zturtle-python/: README.md  endpoints.json  requirements.txt  zturtle.py
turtlebot3/zturtle-rust/: Cargo.toml  README.md
turtlebot3/zturtle-rust/src/: addresses.rs  main.rs
zenoh-android/LocationTracker/: gradle.properties  settings.gradle.kts
zenoh-android/LocationTracker/app/: build.gradle.kts
zenoh-android/RobotTeleop/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
zenoh-android/RobotTeleop/app/: .gitignore  build.gradle.kts
zenoh-android/ZenohApp/: README.md  gradle.properties  settings.gradle.kts
zenoh-android/ZenohApp/app/: build.gradle.kts
zenoh-dds-interop/shapes_demo/: Cargo.toml  README.md
zenoh-dds-interop/shapes_demo/src/: main.rs  zenoh_examples_common.rs
zenoh-dragonbot/: README.md
zenoh-dragonbot/zenoh-pico-dragonbot/: platformio.ini
zenoh-dragonbot/zenoh-pico-dragonbot/include/: turtlebot3_config.h
zenoh-dragonbot/zenoh-pico-dragonbot/src/: turtlebot3_burger.ino
zenoh-dragonbot/zenoh-pico-teleop-gyro/: platformio.ini
zenoh-dragonbot/zenoh-pico-teleop-gyro-ros2/: platformio.ini
zenoh-dragonbot/zenoh-pico-teleop-gyro-ros2/src/: main.ino
zenoh-dragonbot/zenoh-pico-teleop-gyro/src/: main.ino
zenoh-dragonbot/zenoh-pico-teleop-sub/: Makefile
zenoh-dragonbot/zenoh-pico-teleop-sub/include/: config.hpp
zenoh-dragonbot/zenoh-pico-teleop-sub/src/: main.cpp
zenoh-dragonbot/zenoh-pico-turtlebot/: platformio.ini
zenoh-fence/zenoh-pico-teleop-gyro/: platformio.ini
zenoh-flow-bot3/: Cargo.toml  README.md  turtlebot3.yaml
zenoh-flow-bot3/lidar-sink/: Cargo.toml
zenoh-flow-bot3/lidar-sink/src/: lib.rs  (+1 more)
zenoh-flow-bot3/operator-twist/: Cargo.toml
zenoh-flow-bot3/robot-sink/: Cargo.toml
zenoh-flow-bot3/source-cmd-file/: Cargo.toml
zenoh-flow-bot3/source-cmd-file/src/: lib.rs
zenoh-flow-bot3/source-gamepad/: Cargo.toml
zenoh-flow-bot3/source-gamepad/src/: gamepad.yml  lib.rs
zenoh-flow-bot3/source-lidar/: Cargo.toml
zenoh-flow-bot3/source-lidar/examples/: async-test.rs
zenoh-flow-bot3/source-lidar/src/: lib.rs  lidar.yml
zenoh-flow-bot3/source-tick/: Cargo.toml
zenoh-flow-bot3/tb3/: Cargo.toml
zenoh-flow-bot3/tb3/src/: addresses.rs  lib.rs  tb3.yml
zenoh-home/light-sensor/: platformio.ini
zenoh-home/soil-sensor/: platformio.ini
zenoh-home/temp-humi-sensor/: platformio.ini
zenoh-map-dashboard/: .gitignore  .npmrc  Dockerfile  README.md  default.conf  docker-compose.yaml  package-lock.json  package.json  pub_alert.py  pub_position.py  vite.config.ts
zenoh-map-dashboard/.devcontainer/: Dockerfile  devcontainer.json
zenoh-map-dashboard/src/: main.ts
zenoh-pico-dds/: README.md
zenoh-pico-dds/helloworld/: CMakeLists.txt  README.md  publisher.c  subscriber.c  z_pub_cdr.c  z_sub_cdr.c
zenoh-pico-dds/roundtrip/: CMakeLists.txt  README.md  ping.c  pong.c  z_ping.c  z_pong.c
zenoh-shamir/: Cargo.toml  README.md
zenoh-shamir/zenoh_eval_shamir/: Cargo.toml
zenoh-shamir/zenoh_eval_shamir/src/: main.rs
zenoh-shamir/zenoh_put_shamir/: Cargo.toml
zenoh-shamir/zenoh_put_shamir/src/: main.rs
zenoh-shamir/zenoh_queryable_shamir/: Cargo.toml
zenoh-shamir/zenoh_queryable_shamir/src/: main.rs
zenoh-tetris/: Cargo.toml  README.md
zenoh-tetris/src/: client.rs  common.rs  hot_seat.rs  server.rs  zenoh_client.rs  zenoh_server.rs
(+120 files in other folders)
