[workspace]
members = ["zenoh_queryable_shamir", "zenoh_put_shamir"]

[workspace.dependencies]
zenoh = "1.9.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3.29"
env_logger = "0.10.0"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
sharks = "0.5.0"
