[package]
name = "zenoh-tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hot_seat"
path = "src/hot_seat.rs"

[[bin]]
name = "zenoh_server"
path = "src/zenoh_server.rs"

[[bin]]
name = "zenoh_client"
path = "src/zenoh_client.rs"

[dependencies]
gametetris-rs = { git = "https://github.com/milyin/gametetris-rs" }
console = "0.15.5"
zenoh = "0.7.2-rc"
uuid = "1.1.3"
human-hash = "0.4.0"
serde_json = "1.0.96"
flume = "0.10.14"