[package]
name = "zenoh-tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hot_seat"
path = "src/hot_seat.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
gametetris-rs = { git = "https://github.com/milyin/gametetris-rs" }
console = "0.15.5"
zenoh = "0.10.0-rc"
uuid = "1.1.3"
human-hash = "0.4.0"
serde_json = "1.0.96"
# NOTE(fuzzypixelz): the flume version here should be manually synced with zenoh's.
# Maybe zenoh should re-export flume types (i.e. Receiver, etc)?
flume = "0.11"
