#
# Copyright (c) 2021 ADLINK Technology Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ADLINK zenoh team, <zenoh@adlink-labs.tech>
#
[package]
name = "ros2-teleop"
version = "0.0.1"
repository = "https://github.com/JEnoch/ROS2-playground"
authors = ["Julien Enoch <julien@enoch.fr>"]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "A ROS2 simple teleop app using Eclipse zenoh"
readme = "./README.md"

[dependencies]
zenoh = "0.5.0-beta.8"
async-std = { version = "=1.9.0", features = ["attributes", "unstable"] }
futures = "0.3.12"
serde = "1"
serde_derive = "1"
cdr = "0.2.4"
log = "0.4"
env_logger = "0.8.2"
clap = "2.33"
crossterm = "0.19"

[[bin]]
name = "ros2-teleop"
