[package]
name = "zcam"
version = "0.1.0"
authors = ["Olivier Hécart <olivier.hecart@adlinktech.com", 
           "kydos <angelo@icorsaro.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git" }
async-std = { version = "=1.11.0", features = ["attributes", "unstable"] }
futures = "0.3.15"
clap = "3.2.15"
log = "0.4"
env_logger = "0.9.0"
opencv = "0.66.0"

[[bin]]
name = "zdisplay"
test = false
bench = false
path = "src/display.rs"

[[bin]]
name = "zcapture"
test = false
bench = false
path = "src/capture.rs"
