#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
name = "sink-serialize"
version = "0.3.0"
edition = "2018"

[dependencies]
async-std = { version = "=1.11.0", features = ["attributes","unstable"] }
async-trait = "0.1"
zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", tag = "v0.3.0" }
types = { path = "../types" }
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }

[lib]
name = "sink_serialize"
crate-type = ["cdylib"]
path = "src/lib.rs"
