#
# Copyright (c) 2017, 2020 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   The Zenoh Team, <zenoh@zettascale.tech>
#
[package]
name = "zlidar"
version = "0.1.0"
edition = "2021"

[dependencies]
zenoh = { version = "0.10.0-rc", default-features = false, features = ["transport_tcp", "transport_udp"] }
hls_lfcd_lds_driver = { default-features = false, features = ["async_smol", "ser_de"], version = "0.1.5" }
async-std = { version = "=1.12.0", default-features = false, features = ["attributes"] }
cdr = "0.2.4"
clap = "3.2.12"
env_logger = "0.9.0"
serialport = { version = "4.1" }
serde = "1"
serde_derive = "1"
serde_json = "1"
