#
# Copyright (c) 2017, 2020 ADLINK Technology Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ADLINK zenoh team, <zenoh@adlink-labs.tech>
#
[package]
name = "zturtle"
version = "0.1.0"
edition = "2021"

[dependencies]
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh", default-features = false, features = ["transport_tcp", "transport_udp", ] }
cdr = "0.2.4"
clap = "3.2.12"
dynamixel2 = "0.3.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
opencv = "0.66.0"
