[package]
name = "shapes-demo"
authors = [ "Juhana Helovuo <juhana.helovuo@atostek.com" ]
version = "0.1.0"
edition = "2021"
license = "EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]

[dependencies]
zenoh = "1.9.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
cdr-encoding = "0.10"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
byteorder = "1"
