#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
name = "source-gamepad"
version = "0.3.0"
edition = "2018"
repository = "https://github.com/eclipse-zenoh/zenoh-demos"
homepage = "http://zenoh.io"
authors = ["gabrik <gabriele.baldoni@gmail.com>", "Julien Loudet <julien.loudet@zettascale.tech>"]
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh Flow Turtlebot3"
readme = "README.md"

[dependencies]
async-std = { version = "=1.12.0", features = ["attributes","unstable"] }
async-trait = "0.1"
gilrs = "0.8.2"
zenoh-flow = { git = "https://github.com/ZettaScaleLabs/zenoh-flow.git", branch = "dev/v0.4.0" }
zenoh-flow-example-types = { git = "https://github.com/ZettaScaleLabs/zenoh-flow-examples.git", branch = "dev/v0.4.0" }

[lib]
name = "source_gamepad"
crate-type = ["cdylib"]
path = "src/lib.rs"
