#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
name = "source-lidar"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/eclipse-zenoh/zenoh-demos"
homepage = "http://zenoh.io"
authors = ["gabrik <gabriele.baldoni@gmail.com>", "Julien Loudet <julien.l@zettascale.tech>"]
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh Flow Turtlebot3"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch = "master" }
async-trait = "0.1"
hls_lfcd_lds_driver = {version  = "0.1",  default-features = false,  features = ["async_smol", "ser_de"]}
bincode = "1"
serde = { version = "1.0", features = ["derive", "rc"]}
zenoh-flow-example-types = { git = "https://github.com/ZettaScaleLabs/zenoh-flow-examples", branch="master" }

[lib]
name = "lidar"
crate-type=["cdylib"]
path="src/lib.rs"

[package.metadata.zenohflow]
id = "Lidar"
kind = "source"
outputs=[ {id ="Data", type="lidar-data"}]


[dev-dependencies]
clap = { version = "3.1", features = ["derive"] }
async-std = { version = "=1.11.0", features = ["attributes", "tokio1"] }
tokio-serial = "5.4.1"