#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
name = "source-lidar"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/eclipse-zenoh/zenoh-demos"
homepage = "http://zenoh.io"
authors = ["gabrik <gabriele.baldoni@gmail.com>", "Julien Loudet <julien.loudet@zettascale.tech>"]
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh Flow Turtlebot3"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "=1.11.0", features = ["attributes","unstable"] }
async-trait = "0.1"
bincode = "1"
hls_lfcd_lds_driver = {version  = "0.1",  default-features = false,  features = ["async_smol", "ser_de"]}
serde = { version = "1.0", features = ["derive", "rc"]}
zenoh-flow = { git = "https://github.com/ZettaScaleLabs/zenoh-flow.git", branch = "dev/v0.4.0" }
zenoh-flow-example-types = { git = "https://github.com/ZettaScaleLabs/zenoh-flow-examples.git", branch = "dev/v0.4.0" }

[lib]
name = "lidar"
crate-type=["cdylib"]
path="src/lib.rs"

[package.metadata.zenohflow]
id = "Lidar"
kind = "source"
outputs=[ {id ="Data", type="lidar-data"}]


[dev-dependencies]
clap = { version = "3.1", features = ["derive"] }
async-std = { version = "=1.11.0", features = ["attributes", "tokio1"] }
tokio-serial = "5.4.1"
