[package]
name        = "zenoh_put_shamir"
version     = "0.0.1"
authors     = ["Julien Loudet <julien.loudet@adlinktech.com>"]
license     = " EPL-2.0 OR Apache-2.0"
categories  = ["network-programming"]
description = "A simple way of using Shamir’s Secret Sharing Scheme on top of Zenoh"
readme      = "../README.md"
edition     = "2018"

[dependencies]
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh", branch = "api-changes" }
async-std = { version = "=1.12.0", features = ["attributes", "unstable"] }
futures = "0.3.12"
log = "0.4"
env_logger = "0.9.0"
clap = "3.2.12"
sharks = "0.5.0"
