[package]
name = "zenoh_queryable_shamir"
version = "0.0.1"
authors = ["Julien Loudet <julien.loudet@adlinktech.com>"]
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "A simple way of using Shamir’s Secret Sharing Scheme on top of Zenoh"
readme = "../README.md"
edition = "2018"

[dependencies]
zenoh = { workspace = true }
async-std = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
sharks = { workspace = true }
