[package]
name = "zcam"
version = "0.1.0"
authors = [
    "Olivier Hécart <olivier.hecart@zettascale.tech",
    "kydos <kydos@protonmail.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh = { version = "1.3.3", features = ["unstable", "shared-memory"] }
tokio = {version = "1.44.2"}
futures = "0.3.15"
clap = { version = "4.5.36", features = ["derive"] } 
log = "0.4.27"
env_logger = "0.11.8"
serde_json = "1.0.140"
opencv = { version = "0.94.4", default-features = false, features = [
    "videoio",
    "imgcodecs",
    "imgproc",
    "highgui",
    "clang-runtime",
] }

[[bin]]
name = "zdisplay"
test = false
bench = false
path = "src/display.rs"

[[bin]]
name = "zcapture"
test = false
bench = false
path = "src/capture.rs"

[profile.release]
debug = false     # If you want debug symbol in release mode, set the env variable: RUSTFLAGS=-g
lto = "thin"
codegen-units = 1
opt-level = 2
panic = "abort"
