[package]
name = "zcam"
version = "0.1.0"
authors = [
    "Olivier Hécart <olivier.hecart@zettascale.tech",
    "kydos <kydos@protonmail.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh = { git="https://github.com/eclipse-zenoh/zenoh.git", features = ["unstable", "shared-memory"] }
zenoh-ext = { git="https://github.com/eclipse-zenoh/zenoh.git" }
tokio = {version = "1.47.1"}
futures = "0.3.31"
clap = { version = "4.5.47", features = ["derive"] } 
tracing = "0.1.41"
serde_json = "1.0.145"
opencv = { version = "0.98.2", default-features = false, features = [
    "videoio",
    "imgcodecs",
    "imgproc",
    "highgui",
    "clang-runtime",
    "objdetect"
] }
rkyv = { version = "0.8.16", features = ["unaligned"] } 

[[bin]]
name = "zdisplay"
test = false
bench = false
path = "src/display.rs"

[[bin]]
name = "zencode"
test = false
bench = false
path = "src/encode.rs"

[[bin]]
name = "zdecode"
test = false
bench = false
path = "src/decode.rs"

[[bin]]
name = "zcapture"
test = false
bench = false
path = "src/capture.rs"

[[bin]]
name = "zhaar"
test = false
bench = false
path = "src/haar.rs"

[profile.release]
debug = false     # If you want debug symbol in release mode, set the env variable: RUSTFLAGS=-g
lto = "thin"
codegen-units = 1
opt-level = 2
panic = "abort"
